--- a/contact.html
+++ b/contact.html
@@ -1018,7 +1018,7 @@ body {
         <div class="about-section">
             <h2 class="section-title">नकाशा (Location)</h2>
             <div class="map-responsive">
-                <iframe src="MapLink" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15338.131042364377!2d74.34399114998249!3d16.03782035419163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc08383b4deb8dd%3A0xbf2f3d1b02e73117!2sHadalge%2C%20Maharashtra%20416504!5e0!3m2!1sen!2sin!4v1766211962079!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="about-section text-center">
