--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>मुख्यपृष्ठ | हडलगे ग्रामपंचायत, गडहिंग्लज</title>
+    <title>ग्रामपंचायत हडलगे ता:गडहिंग्लज जि : कोल्हापूर  | हडलगे ग्रामपंचायत, गडहिंग्लज</title>
 	<meta name="description" content="Hadalge Grampanchayat, Gadhinglaj">
     <meta name="keywords" content="Grampanchayat, Village, Maharashtra, हडलगे ग्रामपंचायत, गडहिंग्लज, Sarpanch, Vikas Kame">
 	<link rel="icon" type="image/x-icon" href="https://hadalge.gadgp.in/assets/gp3379347.webp">
 <link rel="shortcut icon" href="https://hadalge.gadgp.in/assets/gp3379347.webp">
     <meta name="author" content="हडलगे ग्रामपंचायत, गडहिंग्लज">
-    <meta name="theme-color" content="#FF9933"> <meta property="og:title" content="मुख्यपृष्ठ | हडलगे ग्रामपंचायत, गडहिंग्लज">
+    <meta name="theme-color" content="#FF9933"> <meta property="og:title" content="ग्रामपंचायत हडलगे ता:गडहिंग्लज जि : कोल्हापूर  | हडलगे ग्रामपंचायत, गडहिंग्लज">
     
     <meta property="og:description" content="Hadalge Grampanchayat, Gadhinglaj">
     
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="मुख्यपृष्ठ | हडलगे ग्रामपंचायत, गडहिंग्लज">
+    <meta name="twitter:title" content="ग्रामपंचायत हडलगे ता:गडहिंग्लज जि : कोल्हापूर  | हडलगे ग्रामपंचायत, गडहिंग्लज">
     <meta name="twitter:image" content="https://hadalge.gadgp.in/assets/gp3379347.webp">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#FF9933">
@@ -1000,8 +1000,8 @@ body {
             <a href="about.html" class="btn-small" style="background:var(--primary); color:white; padding:10px 20px; text-decoration:none; border-radius:5px;">अधिक वाचा &rarr;</a>
         </div>
         <div class="quick-info-container">
-            <div class="stat-card"><i class="fas fa-users"></i><h3>0</h3><p>लोकसंख्या</p></div>
-            <div class="stat-card"><i class="fas fa-home"></i><h3>0</h3><p>एकूण घरे</p></div>
+            <div class="stat-card"><i class="fas fa-users"></i><h3>2350 </h3><p>लोकसंख्या</p></div>
+            <div class="stat-card"><i class="fas fa-home"></i><h3>0 </h3><p>एकूण घरे</p></div>
             <div class="stat-card"><i class="fas fa-graduation-cap"></i><h3>0</h3><p>साक्षरता दर (%)</p></div>
             <div class="stat-card"><i class="fas fa-map-signs"></i><h3>0</h3><p>प्रभाग संख्या</p></div>
             <div class="stat-card"><i class="fas fa-chart-area"></i><h3>0</h3><p>क्षेत्रफळ (Ha)</p></div>
