Updated via CMS: gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -1056,6 +1056,12 @@ body {
         </style><div class="about-section">
                 <h2 class="section-title">📸 फोटो गॅलरी</h2>
                 <div class="gallery-grid"><div class="gallery-item photo-item g-hidden">
+               <img src="https://hadalge.gadgp.in/assets/gp2220363.webp" loading="lazy" onclick="openLightbox(this.src)" alt="Gallery Photo">
+           </div><div class="gallery-item photo-item g-hidden">
+               <img src="https://hadalge.gadgp.in/assets/gp3698268.webp" loading="lazy" onclick="openLightbox(this.src)" alt="Gallery Photo">
+           </div><div class="gallery-item photo-item g-hidden">
+               <img src="https://hadalge.gadgp.in/assets/gp1292529.webp" loading="lazy" onclick="openLightbox(this.src)" alt="Gallery Photo">
+           </div><div class="gallery-item photo-item g-hidden">
                <img src="https://hadalge.gadgp.in/assets/gp3168842.webp" loading="lazy" onclick="openLightbox(this.src)" alt="Gallery Photo">
            </div><div class="gallery-item photo-item g-hidden">
                <img src="https://hadalge.gadgp.in/assets/gp7027847.webp" loading="lazy" onclick="openLightbox(this.src)" alt="Gallery Photo">
